# redfish-rs

./: Cargo.toml  README.md
model/: Cargo.toml
model/examples/: chassis.rs  root.rs  system.rs
model/src/: acceleration_function.rs  acceleration_function_collection.rs  account_service.rs  action_info.rs  address_pool.rs  address_pool_collection.rs  aggregate.rs  aggregate_collection.rs  aggregation_service.rs  aggregation_source.rs  aggregation_source_collection.rs  allow_deny.rs  allow_deny_collection.rs  application.rs  application_collection.rs  assembly.rs  automation_instrumentation.rs  automation_node.rs  automation_node_collection.rs  battery.rs  battery_collection.rs  battery_metrics.rs  bios.rs  boot_option.rs  boot_option_collection.rs  cable.rs  cable_collection.rs  certificate.rs  certificate_collection.rs  certificate_enrollment.rs  certificate_enrollment_collection.rs  certificate_locations.rs  certificate_service.rs  chassis.rs  chassis_collection.rs  circuit.rs  circuit_collection.rs  component_integrity.rs  component_integrity_collection.rs  composition_reservation.rs  (+230 more)
model/src/swordfish/: capacity.rs  capacity_source_collection.rs  class_of_service.rs  class_of_service_collection.rs  consistency_group.rs  consistency_group_collection.rs  data_protection_line_of_service.rs  data_protection_los_capabilities.rs  data_security_line_of_service.rs  data_security_los_capabilities.rs  data_storage_line_of_service.rs  data_storage_los_capabilities.rs  file_share.rs  file_share_collection.rs  file_system.rs  file_system_collection.rs  file_system_metrics.rs  hosted_storage_services.rs  io_connectivity_line_of_service.rs  io_connectivity_los_capabilities.rs  io_performance_line_of_service.rs  io_performance_los_capabilities.rs  io_statistics.rs  line_of_service.rs  line_of_service_collection.rs  mod.rs  nvme_domain.rs  nvme_domain_collection.rs  nvme_firmware_image.rs  storage_group.rs  storage_group_collection.rs  storage_pool.rs  storage_pool_collection.rs  storage_pool_metrics.rs  storage_replica_info.rs  storage_service.rs  storage_service_collection.rs  volume.rs  (+4 more)
model/tools/: gen.sh
service/: Cargo.toml
service/examples/: server.rs
service/src/: lib.rs  model.rs  response.rs  service.rs
(+3 files in other folders)
