[package]
name = "redfish-model"
keywords = ["redfish"]
# https://crates.io/category_slugs
categories = ["development-tools"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.12.22", features = ["blocking"] }
serde_json = "1.0.140"
