[package]
name = "redfish-service"
keywords = ["redfish"]
# https://crates.io/category_slugs
categories = ["development-tools"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.203", features = ["derive"] }
redfish-model = { path = "../model" }

[dev-dependencies]
base64 = "0.22.1"
tokio = { version = "1.38.0", features = ["macros", "net", "rt-multi-thread"] }
